#48 fix button heigth on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -252,7 +252,8 @@ footer {
   }
 
   .mat-icon {
-    height: 1em;
+    height: 100%;
+    line-height: 36px;
     width: 1em;
     font-size: 1.25em;
     margin-right: 18px;
@@ -260,7 +261,6 @@ footer {
     @include media-breakpoint-down(sm) {
       margin-right: 0px !important;
       font-size: 1.5em !important;
-      height: 1.05em !important;
     }
 
     &:after {
